syntax = "proto3";

package chora.voucher.v1;

option go_package = "github.com/chora-io/mods/voucher/types/v1";

// EventCreate is an event emitted when a voucher is created.
message EventCreate {

  // id is the unique identifier of the voucher.
  uint64 id = 1;
}

// EventIssue is an event emitted when vouchers are issued.
message EventIssue {

  // id is the unique identifier of the voucher.
  uint64 id = 1;

  // metadata is the metadata of the issuance.
  string metadata = 2;
}

// EventUpdateIssuer is an event emitted when voucher issuer is updated.
message EventUpdateIssuer {

  // id is the unique identifier of the voucher.
  uint64 id = 1;
}

// EventUpdateMetadata is an event emitted when voucher metadata is updated.
message EventUpdateMetadata {

  // id is the unique identifier of the voucher.
  uint64 id = 1;
}
